# robin_core

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Grammar.bnf  LICENSE  README.md  clippy.sh  format.bat  format.sh
robin_cli/: Cargo.toml  README.md  clippy.bat
robin_cli/src/: main.rs
robin_web/: Cargo.toml  run.sh
robin_web/src/: main.rs
robin_web/static/: index.html
src/: ast.rs  compiler.rs  error.rs  lib.rs  parser.lalrpop  parser.rs  stdlib.rs  table.rs  to_javascript.rs
src/analysis/: table.rs
src/ast/: mod.rs
src/error/: mod.rs
src/grammar/: grammar.pest
src/parser/: boolean.rs  expression.rs  identifier.rs  mod.rs  number.rs
src/stdlib/: mod.rs  stdlib_names.rs
tests/: analysis_table_tests.rs  boolean_parser_tests.rs  eval_expr_tests.rs  expression_parser_tests.rs  function_call_literal.rs  function_literal_tests.rs  identifier_parser_tests.rs  list_parser_tests.rs  number_parser_tests.rs  parser_test.rs  string_parser_tests.rs
