[package]
name = "robin_core"
version = "0.4.10"
authors = ["William Collier <coll01502449@scc.ac.uk>"]
description = "A simple (custom) Lisp to JavaScript source-to-source compiler"
license = "Apache-2.0"
repository = "https://github.com/willifme/robin_core"

[dependencies]
pest = "^1.0.0-beta"
pest_derive = "^1.0.0-beta"
ansi_term = "0.9"
lazy_static = "1.0"